--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "description": "Metric / Imperial Unit Converter",
   "main": "server.js",
   "scripts": {
+    "devStart": "nodemon server.js",
     "start": "node server.js",
-		"test": "mocha ./tests/ --ui tdd"
+    "test": "mocha ./tests/ --ui tdd"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anthoHerrera/metric-imperial-converter-tdd.git"
   },
   "keywords": [
-		"node",
-		"freeCodeCamp",
-		"express"
-	],
+    "node",
+    "freeCodeCamp",
+    "express"
+  ],
   "author": "Anthony_Herrera",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/anthoHerrera/metric-imperial-converter-tdd/issues"
   },
   "homepage": "https://github.com/anthoHerrera/metric-imperial-converter-tdd#readme",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
@@ -29,5 +33,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mocha": "^9.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
